--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <section class="about">
         <div class="main">
-            <img src="/Users/X230/Documents/webpage/web01/Porfolio/calugar-ana-maria-19mV7CYQ6T8-unsplash.jpg" height="500px" width="35%" alt="">
+            <img src="https://unsplash.com/photos/man-in-gray-dress-shirt-sitting-on-chair-in-front-of-computer-monitor-B6JINerWMz0" height="500px" width="35%" alt="">
         <div class="about-text">
             <h2>About Me</h2>
             <h5>
