--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yusuf Adeyinka</title>
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="portfolio.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
     </div>
     <section class="about">
         <div class="main">
-            <img src="https://unsplash.com/photos/man-in-gray-dress-shirt-sitting-on-chair-in-front-of-computer-monitor-B6JINerWMz0" height="500px" width="35%" alt="">
+            <img src="/Porfolio/luke-peters-B6JINerWMz0-unsplash.jpg" height="500px" width="35%" alt="">
         <div class="about-text">
             <h2>About Me</h2>
             <h5>
